Fix typo and update meta tag

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content"width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="style.css">
 </head>
@@ -13,21 +13,21 @@
     <div id="calculator">
         <input id="display" readonly>
         <div id="keys">
-            <button onclick="appendToDispplay('+')" class="operator-button">+</button>
-            <button onclick="appendToDispplay('7')">7</button>
-            <button onclick="appendToDispplay('8')">8</button>
-            <button onclick="appendToDispplay('9')">9</button>
-            <button onclick="appendToDispplay('-')" class="operator-button">-</button>
-            <button onclick="appendToDispplay('4')">4</button>
-            <button onclick="appendToDispplay('5')">5</button>
-            <button onclick="appendToDispplay('6')">6</button>
-            <button onclick="appendToDispplay('*')" class="operator-button">*</button>
-            <button onclick="appendToDispplay('1')">1</button>
-            <button onclick="appendToDispplay('2')">2</button>
-            <button onclick="appendToDispplay('3')">3</button>
-            <button onclick="appendToDispplay('/')" class="operator-button">/</button>
-            <button onclick="appendToDispplay('0')">0</button>
-            <button onclick="appendToDispplay('.')">.</button>
+            <button onclick="appendToDisplay('+')" class="operator-button">+</button>
+            <button onclick="appendToDisplay('7')">7</button>
+            <button onclick="appendToDisplay('8')">8</button>
+            <button onclick="appendToDisplay('9')">9</button>
+            <button onclick="appendToDisplay('-')" class="operator-button">-</button>
+            <button onclick="appendToDisplay('4')">4</button>
+            <button onclick="appendToDisplay('5')">5</button>
+            <button onclick="appendToDisplay('6')">6</button>
+            <button onclick="appendToDisplay('*')" class="operator-button">*</button>
+            <button onclick="appendToDisplay('1')">1</button>
+            <button onclick="appendToDisplay('2')">2</button>
+            <button onclick="appendToDisplay('3')">3</button>
+            <button onclick="appendToDisplay('/')" class="operator-button">/</button>
+            <button onclick="appendToDisplay('0')">0</button>
+            <button onclick="appendToDisplay('.')">.</button>
             <button onclick="calculate()">=</button>
             <button onclick="clearDisplay()" class="operator-button">C</button>
         </div>
